--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-python-telegram-bot==13.15
-requests==2.31.0
-rich==13.7.0
-colorist==1.8.6  # غير من 1.5.2 إلى 1.8.6
-Flask==2.3.3
+python-telegram-bot==20.6
+requests
+rich
+colorist
