--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-telegram-bot==20.6
-requests
-rich
-colorist
+python-telegram-bot==20.7
+requests==2.31.0
+rich==13.7.0
+colorist==1.8.6
+Flask==2.3.3
